# mkcheck2

./: .clang-format  .gitignore  .swift-version  CMakeLists.txt  Dockerfile  Package.resolved  Package.swift  README.md  build.sh  format.sh  test.py  test.sh
Documentation/: Design.md  TODO.md
Sources/: CMakeLists.txt
Sources/mkcheck2/: CMakeLists.txt  Serialization.swift  Tracer.swift  mkcheck2.swift
Sources/mkcheck2-explore/: index.html  index.mjs
Sources/mkcheck2-test-utils/: TestUtils.swift
Sources/mkcheck2abi/: CMakeLists.txt
Sources/mkcheck2abi/include/: mkcheck2.h  module.modulemap
Sources/mkcheck2bpf/: CMakeLists.txt  mkcheck2.bpf.c  mkcheck2.h  module.modulemap.in  vmlinux.h
Sources/mkcheck2syslinux/include/: mkcheck2syslinux.h  module.modulemap
Tests/MkCheck2Tests/: MkCheck2Tests.swift
Tests/SnapshotTests/: access.c  access.sh  access.txt  basic.sh  basic.txt  chdir.c  chdir.sh  chdir.txt  clang.sh  clang.txt  clone3.txt  dir.sh  dir.txt  execveat.sh  execveat.txt  fallocate.sh  fallocate.txt  ftruncate.c  ftruncate.sh  ftruncate.txt  getdents.sh  getdents.txt  gmake-jobserver.sh  gmake-jobserver.txt  link.c  link.sh  link.txt  mmap.c  mmap.sh  mmap.txt  openat.c  pipe.sh  pipe.txt  readlink.sh  readlink.txt  rename.sh  rename.txt  rm.sh  rm.txt  stat.c  (+10 more)
Tests/SnapshotTests/clone3/: Makefile
Tests/SnapshotTests/gmake-jobserver/: Makefile
build-fuzz/lib/: build_fuzz.rb
build-fuzz/lib/build_fuzz/: collector.rb  command.rb  diagnostic.rb  git.rb  graph.rb  system.rb  trace.rb  tracer.rb  verifier.rb
build-fuzz/lib/build_fuzz/command/: build.rb  check-all.rb  check-trace.rb  check.rb  download.rb
